--- a/EECS4413/.project
+++ b/EECS4413/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EECS4413</name>
+	<name>EECS4413A</name>
 	<comment></comment>
 	<projects>
 	</projects>
